--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": "^16.17.0",
     "nodemon": "^2.0.19",
     "open": "^8.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.5.1"
   },
   "type": "module"
 }
