--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://10.66.156.31:3000/238samixd/websockets-chat.git"
+    "url": "https://github.com/238SAMIxD/websockets-chat.git"
   },
   "keywords": [
     "learning",
